--- a/public-clinic/categories.html
+++ b/public-clinic/categories.html
@@ -30,8 +30,23 @@
     <div class="headerShared"></div>
     <div class="cookiesShared"></div>
 
+    <header id="categoriesHeader" class="top-header text-white py-2 bg-primary" style="position: sticky; top: 0px; background: #327835 !important; z-index: 100000;">
+        <div class="container d-flex justify-content-between align-items-center">
+           
+            <div>
+                <div class="d-flex align-items-center mb-1">
+                    <h3>Patologías y Síntomas</h3> <br>
+                </div>
+                <div class="d-flex align-items-center">
+                    <span >Los síntomas y patologías más comues de la columna vertebral</span>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
     <div class="container mt-5">
-        <h2 class="text-center">Categories</h2>
+        
         <div id="categoriesSection" class="row mt-4">
            <!-- Categories will be loaded here -->
         </div>
