fix sticky navbar, fix consultation form, translate cookies, fix refresh in dashboard

--- a/admin-clinic/dashboard.html
+++ b/admin-clinic/dashboard.html
@@ -75,6 +75,7 @@
                 <button class="btn btn-sm btn-outline-light" id="sidebarClose"><i class="fas fa-times"></i></button>
             </div>
             <ul class="list-unstyled">
+                <li><a href="#" class="sidebar-link" id="dashboardLink"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                 <li><a href="#" class="sidebar-link" id="usersLink"><i class="fas fa-users"></i> Users</a></li>
                 <li><a href="#" class="sidebar-link" id="patientsLink"><i class="fas fa-user-injured"></i> Patients</a>
                 </li>
