--- a/public-clinic/index.html
+++ b/public-clinic/index.html
@@ -23,7 +23,8 @@
 
 <body>
 
-    <div class="headerShared"></div>
+    <div class="headerShared" ></div>
+    <div class="navbarShared" style="position: sticky !important;"></div>
     <div class="cookiesShared"></div>
 
 
