--- a/public-clinic/subcategory.html
+++ b/public-clinic/subcategory.html
@@ -33,9 +33,10 @@
     <div class="consultationFormShared"></div>
     <div class="cookiesShared"></div>
     <div class="headerShared"></div>
+    <div class="navbarShared" style="position: sticky !important;"></div>
 
 
-    <header id="subCategoryHeader" class="top-header text-white py-2 bg-primary" style="position: sticky; top: 0px; background: #327835 !important;">
+    <header id="subCategoryHeader" class="top-header text-white py-2 bg-primary" style="position: sticky; top: 159px !important; background: #327835 !important;">
         <div class="container d-flex justify-content-between align-items-center">
            
             <div>
