--- a/public-clinic/categories.html
+++ b/public-clinic/categories.html
@@ -28,9 +28,10 @@
 <body>
     <div class="consultationFormShared"></div>
     <div class="headerShared"></div>
+    <div class="navbarShared" style="position: sticky !important;"></div>
     <div class="cookiesShared"></div>
 
-    <header id="categoriesHeader" class="top-header text-white py-2 bg-primary" style="position: sticky; top: 0px; background: #327835 !important; z-index: 100000;">
+    <header id="categoriesHeader" class="top-header text-white py-2 bg-primary" style="position: sticky; top: 0px; background: #327835 !important;">
         <div class="container d-flex justify-content-between align-items-center">
            
             <div>
