fix cookies title, some design issue, add home navbar item, add pages for sections

--- a/public-clinic/contact.html
+++ b/public-clinic/contact.html
@@ -37,10 +37,10 @@
 
             <div>
                 <div class="d-flex align-items-center mb-1">
-                    <h3>Patologías y Síntomas</h3> <br>
+                    <h3>Contact</h3> <br>
                 </div>
                 <div class="d-flex align-items-center">
-                    <span>Los síntomas y patologías más comues de la columna vertebral</span>
+                    <span>contact</span>
                 </div>
             </div>
         </div>
@@ -49,9 +49,7 @@
 
     <div class="container mt-5">
 
-        <div id="categoriesSection" class="row mt-4">
-            <!-- Categories will be loaded here -->
-        </div>
+        <h3>contact content</h3>
     </div>
 
 
