--- a/public-clinic/information-advice.html
+++ b/public-clinic/information-advice.html
@@ -32,7 +32,7 @@
     <div class="cookiesShared"></div>
 
     <header id="categoriesHeader" class="top-header text-white py-2 bg-primary"
-        style="position: sticky; top: 150px; background: #327835 !important; z-index: 2000;">
+        style="position: sticky; top: 0px; background: #327835 !important;">
         <div class="container d-flex justify-content-between align-items-center">
 
             <div>
