--- a/public-clinic/header.html
+++ b/public-clinic/header.html
@@ -1,49 +1,58 @@
-
-    <!-- Language Dropdown -->
-    <div id="headerLanguage" class="container d-flex justify-content-end py-2">
-        <div class="dropdown">
-            <button class="btn btn-light dropdown-toggle" type="button" id="languageSwitcher" data-bs-toggle="dropdown">
-                <i class="bi bi-flag-fill me-2"></i> <span id="selectedLang" data-i18n="currentLang">Español</span>
-            </button>
-            <ul class="dropdown-menu" style="z-index: 10000;">
-                <li><a class="dropdown-item change-lang" href="#" data-lang="es"><i class="bi bi-flag-fill me-2"></i>
-                        Español</a></li>
-                <li><a class="dropdown-item change-lang" href="#" data-lang="en"><i class="bi bi-flag-fill me-2"></i>
-                        English</a></li>
-                <li><a class="dropdown-item change-lang" href="#" data-lang="ar"><i class="bi bi-flag-fill me-2"></i>
-                        العربية</a></li>
-                <li><a class="dropdown-item change-lang" href="#" data-lang="it"><i class="bi bi-flag-fill me-2"></i>
-                        Italian</a></li>
-                <li><a class="dropdown-item change-lang" href="#" data-lang="fr"><i class="bi bi-flag-fill me-2"></i>
-                        Frensh</a></li>
-            </ul>
-        </div>
+<!-- Language Dropdown -->
+<div id="headerLanguage" class="container d-flex justify-content-end py-2">
+    <div class="dropdown">
+        <button class="btn btn-light dropdown-toggle" type="button" id="languageSwitcher" data-bs-toggle="dropdown">
+            <i class="bi bi-flag-fill me-2"></i> <span id="selectedLang" data-i18n="currentLang">Español</span>
+        </button>
+        <ul class="dropdown-menu" style="z-index: 10000;">
+            <li><a class="dropdown-item change-lang" href="#" data-lang="es"><i class="bi bi-flag-fill me-2"></i>
+                    Español</a></li>
+            <li><a class="dropdown-item change-lang" href="#" data-lang="en"><i class="bi bi-flag-fill me-2"></i>
+                    English</a></li>
+            <!-- <li><a class="dropdown-item change-lang" href="#" data-lang="ar"><i class="bi bi-flag-fill me-2"></i>
+                    العربية</a></li>
+            <li><a class="dropdown-item change-lang" href="#" data-lang="it"><i class="bi bi-flag-fill me-2"></i>
+                    Italian</a></li>
+            <li><a class="dropdown-item change-lang" href="#" data-lang="fr"><i class="bi bi-flag-fill me-2"></i>
+                    Frensh</a></li> -->
+        </ul>
     </div>
+</div>
 
-    <!-- Thin Top Header -->
-    <header id="header1" class="top-header text-white py-2 bg-primary">
-        <div class="container d-flex justify-content-between align-items-center">
-            <!-- Left Section -->
-            <div>
-                <div class="d-flex align-items-center mb-1">
-                    <i class="bi bi-telephone me-2"></i>
-                    <span class="clinic-mobile">+34 123456789</span>
-                </div>
-                <div class="d-flex align-items-center">
-                    <i class="bi bi-whatsapp me-2"></i>
-                    <span class="clinic-whatsapp">+34 123456789</span>
-                </div>
+<!-- Thin Top Header -->
+<header id="header1" class="top-header text-white py-2 bg-primary">
+    <div class="container d-flex justify-content-between align-items-center">
+        <!-- Left Section -->
+        <div>
+            <div class="d-flex align-items-center mb-1">
+                <i class="bi bi-envelope me-2"></i>
+                <a href="mailto:clinicaespaldasana@outlook.com" class="clinic-email">clinicaespaldasana@outlook.com</a>
             </div>
-
-            <!-- Right Section -->
-            <div class="text-end">
-                <h5 class="mb-1 hospital-name" data-i18n="hospital_name">Hospital Clinica</h5>
-                <p class="mb-2" data-i18n="tagline">We take care of your back, we improve your life</p>
-                <button class="btn btn-primary btn-book-appointment" data-i18n="book_appointment">
-                    <i class="bi bi-calendar-date me-2"></i>Book an appointment</button>
-            </div>
-
-
+            <div class="d-flex align-items-center mb-1">
+<a href="https://www.facebook.com/people/Cl%C3%ADnica-Espalda-Sana/61581704639360/"
+                        class="clinic-facebook text-white me-3" target="_blank">
+                        <i class="bi bi-facebook"></i>
+                        <span class="clinic-mobile">Clínica Espalda Sana </span> 
+                    </a>
+                </div>
+            <!--<div class="d-flex align-items-center mb-1">
+                     <i class="bi bi-telephone me-2"></i>
+                    <span class="clinic-mobile">+34 123456789</span> 
+                </div>-->
+            <!--<div class="d-flex align-items-center">
+                     <i class="bi bi-whatsapp me-2"></i>
+                    <span class="clinic-whatsapp">+34 123456789</span> 
+                </div>-->
         </div>
-    </header>
 
+        <!-- Right Section -->
+        <div class="text-end">
+            <h5 class="mb-1 hospital-name" data-i18n="hospital_name">Hospital Clinica</h5>
+            <p class="mb-2" data-i18n="tagline">We take care of your back, we improve your life</p>
+            <!-- <button class="btn btn-primary btn-book-appointment" data-i18n="book_appointment">
+                    <i class="bi bi-calendar-date me-2"></i>Book an appointment</button> -->
+        </div>
+
+
+    </div>
+</header>
