--- a/public-clinic/index.html
+++ b/public-clinic/index.html
@@ -23,9 +23,10 @@
 
 <body>
 
-    <div class="headerShared" ></div>
+    <div class="headerShared"></div>
     <div class="navbarShared" style="position: sticky !important;"></div>
     <div class="cookiesShared"></div>
+    <div class="consultationFormShared"></div>
 
 
 
@@ -33,9 +34,9 @@
     <section id="sectionHero" class="hero-slider">
 
 
-        <div class="appointment-form">
+        <!-- Appointment Form Section -->
+        <!-- <div class="appointment-form">
 
-            <!-- Appointment Form Section -->
             <form id="appointmentForm">
                 <h4 class="text-center mb-4" data-i18n="appointment_schedule">Schedule Your Appointment Now</h2>
                     <div class="row mb-3">
@@ -84,18 +85,7 @@
                         </div>
                     </div>
 
-                    <!-- <div class="row mb-3">
-                <div class="col-md-12">
-                    <div class="form-check">
-                        <input type="checkbox" id="agreeToTerms" name="agree_to_terms" class="form-check-input"
-                            required>
-                        <label for="agreeToTerms" class="form-check-label" data-i18n="agree_terms">I agree to the
-                            terms and conditions</label>
-                    </div>
-                </div>
-            </div> -->
-
-
+                    
                     <div class="row mb-3">
                         <div class="col-md-12">
                             <div class="form-check">
@@ -120,7 +110,27 @@
             </form>
 
 
+        </div> -->
+
+        <!-- Booking Result Modal -->
+        <div class="modal fade" id="bookingModal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content text-center">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalTitle">Title</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="modalIcon" class="mb-3" style="font-size: 60px;"></div>
+                        <p id="modalMessage"></p>
+                    </div>
+                    <div class="modal-footer justify-content-center">
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
         </div>
+
 
         <!-- Modal for Terms -->
         <div class="modal fade" id="termsModal" tabindex="-1" aria-labelledby="termsModalLabel" aria-hidden="true">
@@ -168,7 +178,7 @@
                     <div class="carousel-caption text-start text-white">
                         <h1 data-i18n="carousel_welcome">Welcome to Our Clinic</h1>
                         <p data-i18n="carousel_description">We offer high-quality medical care in all specialties.</p>
-                        <a href="#" class="btn btn-primary" data-i18n="read_more">Read More</a>
+                        <a href="#" class="btn btn-secondary" data-i18n="read_more">Read More</a>
                     </div>
                 </div>
                 <!-- Slide 2 -->
@@ -177,7 +187,7 @@
                     <div class="carousel-caption text-start text-white">
                         <h1 data-i18n="carousel_best_medical_care">The Best Medical Care</h1>
                         <p data-i18n="carousel_team_assistance">Our team of doctors is ready to assist you.</p>
-                        <a href="#" class="btn btn-primary" data-i18n="read_more">Read More</a>
+                        <a href="#" class="btn btn-secondary" data-i18n="read_more">Read More</a>
                     </div>
                 </div>
                 <!-- Slide 3 -->
@@ -187,7 +197,7 @@
                         <h1 data-i18n="carousel_comprehensive_sections">Comprehensive Medical Sections</h1>
                         <p data-i18n="carousel_high_quality_healthcare">High-quality healthcare in a comfortable and
                             safe environment.</p>
-                        <a href="#" class="btn btn-primary" data-i18n="read_more">Read More</a>
+                        <a href="#" class="btn btn-secondary" data-i18n="read_more">Read More</a>
                     </div>
                 </div>
             </div>
@@ -291,6 +301,8 @@
     <!-- Footer Section -->
     <div class="footerShared"></div>
 
+
+
     <!-- Files -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/i18next/i18next.min.js"></script>
@@ -303,7 +315,29 @@
     <script src="assets/js/api.js"></script>
     <script src="assets/js/script.js"></script>
     <script src="assets/js/cookies.js"></script>
-   
+
+
+    <script>
+        $(document).ready(function () {
+
+            var localSelectedNavItem = localStorage.getItem("selectedNavItem");
+
+            $('.navbar-nav li').removeClass("active");
+
+
+            $('#' + localSelectedNavItem).addClass("active");
+            $('#' + localSelectedNavItem).css("background", "#43a044");
+
+            
+
+        });
+
+        var cookiesLocal = false;
+        if (localStorage.getItem("cookiesAccepted") == true) {
+            $("#cookieConsentBanner").css("display", "none !important")
+        }
+
+    </script>
 </body>
 
 </html>
