--- a/public-clinic/login.html
+++ b/public-clinic/login.html
@@ -47,12 +47,12 @@
                                 Español</a></li>
                         <li><a class="dropdown-item change-lang" href="#" data-lang="en"><i class="bi bi-flag-fill me-2"></i>
                                 English</a></li>
-                        <li><a class="dropdown-item change-lang" href="#" data-lang="ar"><i class="bi bi-flag-fill me-2"></i>
+                        <!-- <li><a class="dropdown-item change-lang" href="#" data-lang="ar"><i class="bi bi-flag-fill me-2"></i>
                                 العربية</a></li>
                         <li><a class="dropdown-item change-lang" href="#" data-lang="it"><i class="bi bi-flag-fill me-2"></i>
                                 Italian</a></li>
                         <li><a class="dropdown-item change-lang" href="#" data-lang="fr"><i class="bi bi-flag-fill me-2"></i>
-                                Frensh</a></li>
+                                Frensh</a></li> -->
                     </ul>
                 </div>
             </div>
