--- a/public-clinic/pathologies.html
+++ b/public-clinic/pathologies.html
@@ -26,22 +26,26 @@
 </head>
 
 <body>
-    <div class="consultationFormShared"></div>
+    <!-- <div class="consultationFormShared"></div> -->
     <div class="headerShared"></div>
     <div class="navbarShared" style="position: sticky !important;"></div>
     <div class="cookiesShared"></div>
 
     <header id="categoriesHeader" class="top-header text-white py-2 bg-primary"
-        style="position: sticky; top: 150px; background: #327835 !important; z-index: 2000;">
+        style="position: sticky; top: 150px; background: #204e22 !important;">
         <div class="container d-flex justify-content-between align-items-center">
 
             <div>
                 <div class="d-flex align-items-center mb-1">
-                    <h3>Patologías y Síntomas</h3> <br>
+                    <h3 id="headerTitle">Patologías y Síntomas</h3> <br>
                 </div>
-                <div class="d-flex align-items-center">
+                <div class="d-flex align-items-center mb-1">
+
+                    <h5 id="headerDescription">Patologías y Síntomas</h5> <br>
+                </div>
+                <!-- <div class="d-flex align-items-center">
                     <span>Los síntomas y patologías más comues de la columna vertebral</span>
-                </div>
+                </div> -->
             </div>
         </div>
     </header>
@@ -53,6 +57,16 @@
             <!-- Categories will be loaded here -->
         </div>
     </div>
+<!-- Tooltip المخصص -->
+<div id="customTooltip">
+  <div class="tooltip-inner">
+    <img id="tooltipImage" src="" alt="">
+    <div class="tooltip-text">
+      <h6 id="tooltipTitle"></h6>
+      <p id="tooltipDesc"></p>
+    </div>
+  </div>
+</div>
 
 
     <div class="footerShared"></div>
@@ -71,7 +85,12 @@
 
     <script src="assets/js/app.js"></script>
     <script src="assets/js/api.js"></script>
-
+    <script src="assets/js/cookies.js"></script>
+<script>
+        $(document).ready(function () {
+           
+        });
+    </script>
 
 </body>
 
