--- a/public-clinic/signup.html
+++ b/public-clinic/signup.html
@@ -45,7 +45,7 @@
                         <li><a class="dropdown-item change-lang" href="#" data-lang="en"><i
                                     class="bi bi-flag-fill me-2"></i>
                                 English</a></li>
-                        <li><a class="dropdown-item change-lang" href="#" data-lang="ar"><i
+                        <!-- <li><a class="dropdown-item change-lang" href="#" data-lang="ar"><i
                                     class="bi bi-flag-fill me-2"></i>
                                 العربية</a></li>
                         <li><a class="dropdown-item change-lang" href="#" data-lang="it"><i
@@ -53,7 +53,7 @@
                                 Italian</a></li>
                         <li><a class="dropdown-item change-lang" href="#" data-lang="fr"><i
                                     class="bi bi-flag-fill me-2"></i>
-                                Frensh</a></li>
+                                Frensh</a></li> -->
                     </ul>
                 </div>
             </div>
