--- a/public-clinic/team.html
+++ b/public-clinic/team.html
@@ -26,20 +26,20 @@
 </head>
 
 <body>
-    <div class="consultationFormShared"></div>
+    <!-- <div class="consultationFormShared"></div> -->
     <div class="headerShared"></div>
     <div class="navbarShared" style="position: sticky !important;"></div>
     <div class="cookiesShared"></div>
 
-    <header id="categoriesHeader" class="top-header text-white py-2 bg-primary" style="position: sticky; top: 0px; background: #327835 !important;">
+    <header id="categoriesHeader" class="top-header text-white py-2 bg-primary" style="position: sticky; top: 0px; background: #204e22 !important;">
         <div class="container d-flex justify-content-between align-items-center">
            
             <div>
                 <div class="d-flex align-items-center mb-1">
-                    <h3>Team</h3> <br>
+                    <h3 id="headerTitle" data-i18n="team">Team</h3> <br>
                 </div>
-                <div class="d-flex align-items-center">
-                    <span >Team</span>
+                 <div class="d-flex align-items-center mb-1">
+                    <h5 id="headerDescription" data-i18n="team">Team</h5> <br>
                 </div>
             </div>
         </div>
@@ -52,6 +52,16 @@
            <!-- Categories will be loaded here -->
         </div>
     </div>
+<!-- Tooltip المخصص -->
+<div id="customTooltip">
+  <div class="tooltip-inner">
+    <img id="tooltipImage" src="" alt="">
+    <div class="tooltip-text">
+      <h6 id="tooltipTitle"></h6>
+      <p id="tooltipDesc"></p>
+    </div>
+  </div>
+</div>
 
 
     <div class="footerShared"></div>
@@ -70,6 +80,7 @@
 
     <script src="assets/js/app.js"></script>
     <script src="assets/js/api.js"></script>
+    <script src="assets/js/cookies.js"></script>
 
 
     <script>
